[package]
name = "kaenguru_tunel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
base64 = "0.21.5"
hex = "0.4.3"
snow = { version = "0.9.4", features = ["ring-accelerated"] }
structopt = "0.3.26"

[dev-dependencies]
rand = "0.8.5"
